# Blink-GPU

./: .gitmodules  Makefile.PERLMUTTER
energy/: CMakeLists.txt  README.md
energy/cmake/: FindNCCL.cmake
energy/include/logger/: logger.hpp
energy/include/utils/: ccl_data_types.hpp  comm_type.hpp
energy/scripts/aurora/compile/: comile.sh  compile.sh
energy/scripts/aurora/env/: occl_set_env.sh  set_env.sh  set_mpi_env.sh  set_occl_env.sh  set_occl_env_old.sh
energy/scripts/aurora/parse/: parse.py
energy/scripts/aurora/pbs/: run_coll.sh
energy/scripts/aurora/plots/: occl_all_params.py
energy/scripts/aurora/run/: run_coll.py
energy/scripts/aurora/run/single-node/: run_a2a_single_node.py  run_coll.py  run_coll.sh  run_multi_node.sh  run_single_node.sh
energy/scripts/aurora/sched/: a2a_pbs.sh
energy/scripts/aurora/sched/multi-node/: a2a_pbs_multi.sh  send_recv_multi_mpi.sh
energy/scripts/aurora/sched/single-node/: a2a_pbs_single.sh
energy/scripts/enea/compile/: comile.sh
energy/scripts/enea/env/: occl_set_env.sh
energy/scripts/leonardo/compile/: compile.sh
energy/scripts/leonardo/env/: set_nccl_env.sh
energy/scripts/leonardo/parse/: parse.py
energy/scripts/leonardo/sbatch/nccl/: nccl_a2a_default.sh  nccl_ar_default.sh
energy/scripts/leonardo/sbatchman/config/: gen_config_a2a.sh
energy/scripts/leonardo/sbatchman/run/: run_config_a2a.sh
energy/scripts/lumi/compile/: compile.sh
energy/scripts/lumi/env/: mpi_env.sh  rccl_env.sh
energy/scripts/lumi/parse/: parse.py
energy/scripts/lumi/plots/: power.py
energy/scripts/lumi/plots/a2a/: a2a_energy_time.py
energy/scripts/lumi/rccl/: rccl_a2a_default.sh  rccl_ar_default.sh
energy/scripts/sbatchman/: configs.yaml  configs_multi_node.yaml  configs_single_node.yaml  experiments.yaml  experiments_multi_node.yaml  experiments_single_node.yaml  run_exp.py
energy/scripts/sbatchman/leonardo/: configs_single_node.yaml
energy/scripts/sbatchman/lumi/: configs_single_node.yaml  experiments_single_node.yaml
energy/src/: CMakeLists.txt
energy/src/amd/: CMakeLists.txt  a2a_rccl.cpp  ar_rccl.cpp  sendRecv.cpp  sendRecv_asynch_rccl.cpp  sendRecv_synch_rccl.cpp  send_recv_asynch.cpp  send_recv_synch.cpp
energy/src/amd/multi-node/: CMakeLists.txt  a2a_rccl_multi.cpp  ar_rccl_multi.cpp
energy/src/amd/utils/: amd_check.hpp  nccl_data_type.hpp  rccl_ctx.hpp
energy/src/intel/: CMakeLists.txt  a2a_occl.cpp  ar_occl.cpp  send_recv_occl.cpp
energy/src/intel/utils/: occl_ctx.hpp  occl_utils.hpp
energy/src/mpi/: CMakeLists.txt  send_recv_mpi.cpp
energy/src/nvidia/: CMakeLists.txt  a2a_nccl.cu  ar_manual_nccl.cu  ar_nccl.cu  mpi_energy.cu
energy/src/nvidia/multi-node/: a2a_nccl_multi.cu  ar_nccl_multi.cu
energy/src/nvidia/utils/: nccl_ctx.hpp  nccl_data_type.hpp
src/: agth_Baseline.cu
